# fps

./: Cargo.toml  README.md  client_config.toml  plan.txt
maps/: map1.toml  map2.toml  map3.toml  my_map.toml
rott/: resource.txt
src/: consts.rs  flags.rs  gamestate.rs  lib.rs  main.rs  map.rs  minimap.rs  player.rs  renderer.rs  spritesheet.rs  text.rs  textures.rs  utils.rs
task/: spritesheets.md
