[package]
name = "fps"
version = "0.1.0"
edition = "2024"
default-run = "client"

[dependencies]
winit = "0.29.15"
pixels = "0.15.0"
winit_input_helper = "0.16.0"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
local-ip-address = "0.6.5"
anyhow = "1.0"
rayon = "1.11.0"
image = { version = "0.24", features = ["png"] }
toml = "0.8"
rand = "0.9.2"
palette = "0.7.6"
rusttype = "0.9.3"
ab_glyph = "0.2.32"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"
